@@ -14,6 +14,15 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion = "1.5.7"
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+        unitTests.all {
+            jvmArgs(
+                    "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+                    "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+            )
+        }
+    }
 }
 
 dependencies {
@@ -31,6 +40,7 @@ dependencies {
     implementation androidx.appcompat
     implementation androidx.activity
     implementation androidx.pagingRx3
+    implementation androidx.exifinterface
 
     implementation google.material
     implementation apache.stringutils
@@ -45,5 +55,9 @@ dependencies {
     implementation ui.catppuccinSplashscreen
     implementation ui.composeGestures
     implementation ui.composeEasyCrop
-    implementation "androidx.exifinterface:exifinterface:1.3.6"
+
+    testImplementation test.junit
+    testImplementation test.mockk
+    testImplementation test.coroutines
+    testImplementation test.turbine
 }
